[tool.poetry]
name = "description = "Discord Account Token Gen + Checker"
version = "0.1.0"
description = "Discord Account Token Gen + Checker"
authors = ["Gamecooler19"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
